# qtile-extras

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  PKGBUILD  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini  whitelist.py
.github/: check_for_changes
.github/workflows/: changelog.yml  ci.yml  release.yml
docs/: Makefile  conf.py  index.rst  requirements-cffi-pin.txt  requirements.txt  rtd_requirements.txt  sphinx_qtile_extras.py
docs/_static/: admonitions.css
docs/extra/: wallpapers.rst
docs/manual/: install.rst
docs/manual/how_to/: bar.rst  borders.rst  decorations.rst  img-mask.rst  layouts.rst  popup.rst  tooltips.rst
docs/manual/ref/: bar.rst  borders.rst  decorations.rst  hooks.rst  imgmask.rst  layouts.rst  popup.rst  widgets.rst
qtile_extras/: bar.py  foo.py  hook.py  images.py
qtile_extras/layout/: __init__.py  _mods.py  plasma.py
qtile_extras/layout/decorations/: __init__.py  borders.py  injections.py  injections_wayland.py
qtile_extras/popup/: __init__.py  menu.py  toolkit.py
qtile_extras/popup/templates/: __init__.py  mpris2.py  volume.py
qtile_extras/resources/dbusmenu/: __init__.py  dbusmenu.py
qtile_extras/resources/footballscores/: __init__.py  base.py  exceptions.py  footballmatch.py  league.py  matchdict.py  matchevent.py  morphlinks.py  playeraction.py  utils.py
qtile_extras/resources/global_menu/: __init__.py  registrar.py
qtile_extras/resources/snapcast/: __init__.py  snapcontrol.py  snapmpris.py
qtile_extras/resources/stravadata/: __init__.py  locations.py  records.py  sync.py
qtile_extras/resources/visualiser/: cava_draw.py
qtile_extras/resources/wallpapers/: __init__.py
qtile_extras/resources/wordclock/: __init__.py  dutch.py  english.py  finnish.py  french.py  portuguese.py  spanish.py  swedish.py
qtile_extras/utils/: viewer.py
qtile_extras/widget/: __init__.py  alsavolumecontrol.py  analogueclock.py  animatedimage.py  base.py  bluetooth.py  brightnesscontrol.py  continuous_poll.py  currentlayout.py  decorations.py  githubnotifications.py  globalmenu.py  graph.py  groupbox2.py  image.py  iwd.py  lightcontrol.py  livefootballscores.py  mirror.py  mpris2widget.py  multiColorTag.py  network.py  pong.py  pulse_extra.py  pulse_volume.py  scriptexit.py  snake.py  snapcast.py  statusnotifier.py  strava.py  syncthing.py  systray.py  tetris.py  tvheadend.py  unitstatus.py  untested_widget.py  upower.py  visualiser.py  wordclock.py
qtile_extras/widget/mixins/: __init__.py
scripts/: check_print  ubuntu_wayland_setup
stubs/cairocffi/: __init__.pyi  constants.pyi  context.pyi  ffi_build.pyi  fonts.pyi  matrix.pyi  patterns.pyi  pixbuf.pyi  surfaces.pyi  xcb.pyi
stubs/stravalib/: __init__.pyi  attributes.pyi  client.pyi  exc.pyi  model.pyi  protocol.pyi  unithelper.pyi
stubs/stravalib/util/: limiter.pyi
stubs/units/: __init__.pyi  abstract.pyi  compatibility.pyi  composed_unit.pyi  exception.pyi  leaf_unit.pyi  named_composed_unit.pyi  predefined.pyi  quantity.pyi  registry.pyi  si.pyi
stubs/xdg/: IconTheme.py
test/: conftest.py  helpers.py  test_bar.py  test_images.py
test/backend/wayland/: conftest.py
test/backend/x11/: conftest.py
test/layout/decorations/: test_border_decorations.py
test/popup/: test_menu.py  test_toolkit.py
test/scripts/: cpoll.py  exit.py  window.py
test/widget/: conftest.py  test_alsawidget.py  test_analogueclock.py  test_animated_image.py  test_brightness_control.py  test_continuous_poll.py  test_currentlayouticon.py  test_githubnotifications.py  test_global_menu.py  test_groupbox2.py  test_image.py  test_init_configure.py  test_injection_wrapper.py  test_iwd.py  test_livefootballscores.py  test_mpris2.py  test_network.py  test_pong.py  test_popup_mixin.py  test_scriptexit.py  test_snake.py  test_snapcast.py  test_statusnotifier.py  test_strava.py  test_syncthing.py  test_tetris.py  test_tooltip.py  test_tvhwidget.py  test_unitstatus.py  test_upower.py  test_visualiser.py  test_widget_decorations.py  test_widget_init.py  test_wordclock.py
test/widget/decorations/: conftest.py  test_decoration_output.py  test_widget_decorations.py
test/widget/docs_screenshots/: conftest.py  ss_analogue_clock.py  ss_continuouspoll.py  ss_currentlayout.py  ss_currentlayouticon.py  ss_githubnotifications.py  ss_global_menu.py  ss_groupbox2.py  ss_iwd.py  ss_livefootballscores.py  ss_mpris2.py  ss_pong.py  ss_snake.py  ss_snapcast.py  ss_statusnotifier.py  ss_tetris.py  ss_tvheadend.py
test/widget/resources/: lfs_data.py
