[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=7.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "qtile-extras"
authors = [
    {name="elParaguayo"}
]
license = {text="MIT"}
description = "Extra items for qtile that are unlikely to be maintained in the main repo."
dynamic = ["version"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/elParaguayo/qtile-extras"
documentation = "https://qtile-extras.readthedocs.io/en/stable/"
changelog = "https://qtile-extras.readthedocs.io/en/stable/changelog.html"
issues = "https://github.com/elParaguayo/qtile-extras/issues"

[tool.setuptools.packages.find]
exclude = ["test*", "docs*", "stubs*"]

[tool.black]
line-length = 98

[tool.setuptools_scm]

[tool.vulture]
paths = ["qtile_extras", "whitelist.py"]
min_confidence = 100
ignore_decorators = ["@method"]
